Committing changes to edit lime line page soon and fix navbar spill out

--- a/css/limeline.css
+++ b/css/limeline.css
@@ -102,9 +102,3 @@
     text-align: center;
   }
 }
-
-.limelinediv {
-  background-image: url("backgrounds/ChicagoTimelapse.gif");
-  height: 800px;
-  width: auto;
-}
